restart working properly. I had to use global variables for the board and turn so the values didnt get mixed between factories and module pattern functions

--- a/styles.css
+++ b/styles.css
@@ -29,5 +29,11 @@
 }
 
 .end-game-screen{
-    /* display: none; */
+    position: absolute;
+    z-index: 1;
+}
+
+.end-game-screen-hidden{
+    position: absolute;
+    visibility: hidden;
 }
