--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+
+*{
+    margin:0;
+    padding:0;
+}
+
 .restart-button{
 
 }
@@ -20,12 +26,15 @@
 .game-board{
     display:grid;
     grid-template-columns: repeat(3,1fr);
+    margin-bottom: 10vh;
     /* gap: 30px; */
 }
 
 .game-tile{
     padding:45px;
     /* border:1px solid black; */
+    min-height: 18px;
+    min-width: 12.563px;
 }
 
 .game-tile-0{
@@ -79,9 +88,22 @@
 .end-game-screen{
     position: absolute;
     z-index: 1;
+    margin-top:10%;
+    flex-flow: column nowrap;
+    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .end-game-screen-hidden{
     position: absolute;
     visibility: hidden;
+}
+
+
+
+footer{
+    /* height: 20vh; */
+    display: flex;
+    align-items: flex-end;
 }
