--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-
-*{
-    margin:0;
-    padding:0;
-}
-
-.restart-button{
-
-}
-
 .container{
     display:flex;
     justify-content: center;
@@ -15,95 +5,33 @@
     flex-flow: column nowrap;
 }
 
-.blur{
-    filter: blur(2px);
+main{
+    margin-top:5rem;
+    
 }
 
-.container > *{
-    padding:4vh;
+.name-inputs{
+    display:flex;
+    /* flex-flow: column; */
+    gap: 2rem;
 }
 
-.game-board{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
-    margin-bottom: 10vh;
-    /* gap: 30px; */
+.game-types{
+    display: flex;
+    justify-content: center;
+    padding:5rem 0;
+    gap:2rem;
 }
 
-.game-tile{
-    padding:45px;
-    /* border:1px solid black; */
-    min-height: 18px;
-    min-width: 12.563px;
-}
-
-.game-tile-0{
-    border-bottom:1px solid black;
-    border-right:1px solid black;
-}
-
-.game-tile-1{
-    border-bottom:1px solid black;
-    border-right:1px solid black;
-    border-left:1px solid black;
-}
-
-.game-tile-2{
-    border-bottom:1px solid black;
-    border-left:1px solid black;
-}
-
-.game-tile-3{
-    border-bottom:1px solid black;
-    border-right:1px solid black;
-    border-top:1px solid black;
-}
-
-.game-tile-4{
+.game-type-button{
+    text-decoration: none;
+    color:black;
+    border-radius: 10px;
+    padding:1rem 3rem;
+    box-shadow: 3px 3px 10px grey;
     border:1px solid black;
 }
 
-.game-tile-5{
-    border-bottom:1px solid black;
-    border-left:1px solid black;
-    border-top:1px solid black;
-}
-
-.game-tile-6{
-    border-top:1px solid black;
-    border-right:1px solid black;
-}
-
-.game-tile-7{
-    border-left:1px solid black;
-    border-right:1px solid black;
-    border-top:1px solid black;
-}
-
-.game-tile-8{
-    border-top:1px solid black;
-    border-left:1px solid black;
-}
-
-.end-game-screen{
-    position: absolute;
-    z-index: 1;
-    margin-top:10%;
-    flex-flow: column nowrap;
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.end-game-screen-hidden{
-    position: absolute;
-    visibility: hidden;
-}
-
-
-
 footer{
-    /* height: 20vh; */
-    display: flex;
-    align-items: flex-end;
+    margin-top:10rem;
 }
